--- a/data/blog/new-features-in-v1.mdx
+++ b/data/blog/new-features-in-v1.mdx
@@ -175,7 +175,7 @@ Here's how an author markdown file might looks like:
 ```md:default.md
 ---
 name: Tails Azimuth
-avatar: /static/images/avatar.png
+avatar: /static/images/avatar.jpg
 occupation: Professor of Atmospheric Science
 company: Stanford University
 email: address@yoursite.com
