--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
-## Hi, I'm Jens Ochsenmeier.
+# Hi, I'm Jens Ochsenmeier.
 
 I'm the UI Lead at [QuantCo](https://quantco.com/), developing fullstack applications that help people understand complex systems.
 
