--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,9 @@
 # Hi, I'm Jens Ochsenmeier.
 
-I'm the UI Lead at [QuantCo](https://quantco.com/), developing fullstack applications that help people understand complex systems.
+I lead the Fullstack Engineering team at [QuantCo](https://quantco.com/), developing applications that
+
+- help people understand complex systems, and
+- turn machine learning models into actionable insights and decisions.
 
 Previously:
 
