--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -1,10 +1,29 @@
 # Open-Source Projects
 
+## Component Library Library
+
+In nearly all enterprise fullstack-engineering scenarios, a (React) component library is needed. The cll aims to provide a guide together with example implementations for most setups.
+
+[GitHub](https://github.com/jens-ox/cll)
+
+## Bundesdatenkrake
+
+Bundesdatenkrake is a tool that extracts and versions data sets of the German government, providing them via an API in a machine-readable and documented format.
+
+[Website](https://krake.dev) | [GitHub](https://github.com/jens-ox/bundesdatenkrake)
+
+## Karaoke
+
+Early work-in-progress - a web-based Karaoke game, like SingStar or UltraStar.
+
+[Website](https://karaoke-teal.vercel.app/) | [GitHub](https://github.com/jens-ox/karaoke)
+
+
 ## MetricsGraphics
 
 MetricsGraphics is a data visualization library originally developed at Mozilla. I took over maintainership in 2020 and rewrote it in modern TypeScript.
 
-[Website](https://metricsgraphicsjs.org/), [GitHub](https://github.com/metricsgraphics/metrics-graphics)
+[Website](https://metricsgraphicsjs.org/) | [GitHub](https://github.com/metricsgraphics/metrics-graphics)
 
 ## sane-code
 
@@ -18,4 +37,4 @@ There are tons of government databases out there containing public information, 
 
 The project was initiated by [Lilith Wittmann](https://links.lilithwittmann.de/).
 
-[GitHub](https://github.com/bundesAPI/) | [Web](https://bund.dev/)
+[Website](https://bund.dev/) | [GitHub](https://github.com/bundesAPI/)
