--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,15 +1,11 @@
-# Hi, I'm Jens Ochsenmeier.
+# Hi!
 
-I lead the Fullstack Engineering team at [QuantCo](https://quantco.com/), developing applications that
+I'm Jens Ochsenmeier. I lead the Fullstack Engineering team at [QuantCo](https://quantco.com/), developing applications that
 
 - help people understand complex systems, and
 - turn machine learning models into actionable insights and decisions.
 
-Previously:
-
-* [Blue Yonder](https://blueyonder.com/): Senior Software Engineer (Fullstack), Demand Prediction
-* [ArtiMinds Robotics](https://www.artiminds.com/): Data Engineering, Industrial Robotics
-* [Mercedes-Benz](https://group.mercedes-benz.com/de/): Data Mining, Production Control
+I've previously worked at [Blue Yonder](https://blueyonder.com/), [ArtiMinds Robotics](https://www.artiminds.com/) and [Mercedes-Benz](https://group.mercedes-benz.com/de/).
 
 See [Projects](/projects) for my open-source projects.
 
